Calculator/styles.css
body {
  background-color: #151515;
  color: white;
  display: flex;
  justify-content: center;
  align-items: center;
  min-height: 100vh;
}

main {
  background-color: rebeccapurple;
  border-radius: 15px;
  border: 1px solid white;
  display: grid;
  grid-template: repeat(6, 1fr) / repeat(4, 1fr);
  padding: 15px;
  gap: 15px;
  height: 500px;
  width: 300px;
}

#outBox {
  background-color: #151515;
  border: none;
  border-radius: 12px;
  grid-column: 1/span 4;
  align-self: center;
  text-align: end;
  font-size: 46px;
  padding: 10px 20px;
  margin: 8px;
  overflow-wrap: break-word;
  height: 70px;
}

#miniOut {
  font-size: 16px;
  color: gray;
  height: 16px;
}

main>button {
  color: white;
  background-color: black;
  aspect-ratio: 1/1;
  border-radius: 50%;
  border: none;
  font-size: 18px;
}

main>button:hover {
  translate: 0 -3px;
  cursor: pointer;
  background-color: #202020;
}

main>:last-child {
  grid-column: 3/span 2;
  border-radius: 80px;
  aspect-ratio: initial;

}

